# CDR_MFG-Surf-Albedo-and-Aerosol

./: .gitignore  README.md
gedap3/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  environment.yml  setup.py
gedap3/cmake/modules/: FindCISAR.cmake  FindEigen.cmake  FindNetCDF.cmake  FindNetCDF_CXX4.cmake  Findgfortran.cmake  GEDAPUtils.cmake
gedap3/gedap/: __init__.py
gedap3/gedap/cpp/: __init__.py
gedap3/gedap/scheduler/: __init__.py
gedap3/gedap/scheduler/report/: __init__.py  logger.py  traceprints.py
gedap3/gedap/scheduler/setup/: MFG_filenames_generator.py  __init__.py  context.py  tile_handler.py
gedap3/gedap/scheduler/tasks/: __init__.py  generate_products_fiduceo.py  monitoring.py  tasks.py
gedap3/gedap/scheduler/utils/: __init__.py  common_tile.py  input_tile.py  jdutil.py  makedirs.py  print_tools.py  prior_tile.py  product_fiduceo.py  read_col.py  solution_tile.py  static_data_tile.py  tai64n.py  tile.py
gedap3/gedap/scripts/: __init__.py
gedap3/gedap/scripts/nodist/: main.py
gedap3/gedap/version/: __init__.py  version.py
gedap3/pybind11/: .gitrepo
gedap3/resources/templates/mviri/: common_init.json  common_init_IODC.json  mviri_tiles_0000.txt  mviri_tiles_0063.txt
gedap3/src/: GEDAP.cpp
gedap3/src/Common/: Data.h  Global_header.h  Logger.h  TileDimensions.h
gedap3/src/Fortran/: CMakeLists.txt  config.in  library.f90  minpack.f90
gedap3/src/Tile_Maker_Module/: MFGTileMaker.cpp  MFGTileMaker.h  TileMaker.cpp  TileMaker.h
gedap3/src/Tile_Maker_Module/Readers/: AbstractReader.h  MFGMaskReader.cpp  MFGMaskReader.h  MFGObservationsReader.cpp  MFGObservationsReader.h  MaskReader.cpp  MaskReader.h  ModelParamsReader.cpp  ModelParamsReader.h  ModelParamsReader_wrong_interpolation.cpp  ObservationsReader.cpp  ObservationsReader.h  Satellite_Parameters.h  StaticDataReader.cpp  StaticDataReader.h
gedap3/src/Tile_Processor_Module/: PriorManager.cpp  PriorManager.h  TileProcessor.cpp  TileProcessor.h
gedap3/src/Tiles/: FortranStructures.h  TileNetCDFManager.cpp  TileNetCDFManager.h
gedap3/src/Utils/: Math.h  Time.h  catch.hpp  filesystem.hpp
